# flask-website

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
application/: __init__.py  config.py  helper.py  models.py
application/database/: models.py  mysql.py
application/markdown/: about.md  datascience.md  index.md  physics.md
application/routes/: blog.py  main.py
application/static/js/: blog.js
application/static/styles/: banner.css  base.css  base_style.css  blog.css  blog_style.css  login.css  sidebar.css  sidebar_style.css
application/templates/: banner.html  banner_layout.html  base.html  base_layout.html  blog.html  blog_layout.html  create_edit.html  create_edit_post.html  login.html  logout.html  sidebar.html  sidebar_layout.html
application/testing/: seed_db.py
markdown/: about.md  datascience.md  index.md  physics.md
source/: mysql.py
static/: banner_style.css  base_style.css  style.css
static/styles/: banner_style.css  base_style.css  blog_style.css
templates/: banner_layout.html  banner_page.html  base_layout.html  blog_layout.html  index.html  layout.html  physics.html  sidebar_layout.html
