[tool.poetry]
name = "flask-website"
version = "1.0.0"
description = "Personal website"
authors = ["Eric Cotner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.1"
sqlalchemy = {version = "1.3.10", extras = ["mysql"]}
flask-misaka = "1.0.0"
flask-sqlalchemy = "2.4.1"
jinja2 = "2.10.3"
markupsafe = "1.1.1"
itsdangerous = "1.1.0"
werkzeug = "0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
